[gd_scene load_steps=59 format=2]

[ext_resource path="res://Character/Character_Controller.gd" type="Script" id=1]
[ext_resource path="res://Character/Idle.gd" type="Script" id=2]
[ext_resource path="res://Character/Character_State_Machine.gd" type="Script" id=3]
[ext_resource path="res://Character/Jump.gd" type="Script" id=4]
[ext_resource path="res://Character/assets robot rojo/r_flip.png" type="Texture" id=5]
[ext_resource path="res://Character/Move.gd" type="Script" id=6]
[ext_resource path="res://Character/assets robot rojo/r_flip_shoot.png" type="Texture" id=7]
[ext_resource path="res://Character/RayCast2D.gd" type="Script" id=18]
[ext_resource path="res://Character/Lighting.gd" type="Script" id=19]
[ext_resource path="res://UI/Cursor.tscn" type="PackedScene" id=20]
[ext_resource path="res://LevelTimer/LevelTimer.tscn" type="PackedScene" id=21]
[ext_resource path="res://Character/state_name_displayer.gd" type="Script" id=22]
[ext_resource path="res://Character/Camera2D.gd" type="Script" id=23]
[ext_resource path="res://Character/Impulse.gd" type="Script" id=24]
[ext_resource path="res://Character/Attack.gd" type="Script" id=25]
[ext_resource path="res://Character/Line2DLighting.gd" type="Script" id=26]
[ext_resource path="res://HitText/HitText.tscn" type="PackedScene" id=27]
[ext_resource path="res://Character/Tackle.gd" type="Script" id=28]
[ext_resource path="res://Character/assets robot rojo/r_run_16.png" type="Texture" id=47]
[ext_resource path="res://Character/assets robot rojo/r_idle_10.png" type="Texture" id=48]
[ext_resource path="res://Character/assets robot rojo/r_run_2.png" type="Texture" id=49]
[ext_resource path="res://Character/assets robot rojo/r_idle_13.png" type="Texture" id=50]
[ext_resource path="res://Character/assets robot rojo/r_idle_16.png" type="Texture" id=51]
[ext_resource path="res://Character/assets robot rojo/r_run_3.png" type="Texture" id=52]
[ext_resource path="res://Character/assets robot rojo/r_run_4.png" type="Texture" id=53]
[ext_resource path="res://Character/assets robot rojo/r_run_5.png" type="Texture" id=54]
[ext_resource path="res://Character/assets robot rojo/r_run_8.png" type="Texture" id=55]
[ext_resource path="res://Character/assets robot rojo/r_idle_7.png" type="Texture" id=56]
[ext_resource path="res://Character/assets robot rojo/r_run_9.png" type="Texture" id=57]
[ext_resource path="res://Character/assets robot rojo/r_idle_19.png" type="Texture" id=58]
[ext_resource path="res://Character/assets robot rojo/r_run_10.png" type="Texture" id=59]
[ext_resource path="res://Character/assets robot rojo/r_idle_4.png" type="Texture" id=60]
[ext_resource path="res://Character/assets robot rojo/r_run_11.png" type="Texture" id=61]
[ext_resource path="res://Character/assets robot rojo/r_run_14.png" type="Texture" id=62]
[ext_resource path="res://Character/assets robot rojo/r_run_1.png" type="Texture" id=63]
[ext_resource path="res://Character/assets robot rojo/r_run_12.png" type="Texture" id=64]
[ext_resource path="res://Character/assets robot rojo/r_idle_20.png" type="Texture" id=65]
[ext_resource path="res://Character/assets robot rojo/r_idle_1.png" type="Texture" id=66]
[ext_resource path="res://Character/assets robot rojo/r_run_13.png" type="Texture" id=67]
[ext_resource path="res://Character/assets robot rojo/r_run_15.png" type="Texture" id=68]
[ext_resource path="res://Character/assets robot rojo/r_run_6.png" type="Texture" id=69]
[ext_resource path="res://Character/assets robot rojo/r_run_7.png" type="Texture" id=70]
[ext_resource path="res://Character/assets robot rojo/r_jump_14.png" type="Texture" id=71]
[ext_resource path="res://Character/assets robot rojo/r_jump_2.png" type="Texture" id=72]
[ext_resource path="res://Character/assets robot rojo/r_jump_3.png" type="Texture" id=73]
[ext_resource path="res://Character/assets robot rojo/r_jump_4.png" type="Texture" id=74]
[ext_resource path="res://Character/assets robot rojo/r_jump_6.png" type="Texture" id=75]
[ext_resource path="res://Character/assets robot rojo/r_jump_7.png" type="Texture" id=76]
[ext_resource path="res://Character/assets robot rojo/r_jump_10.png" type="Texture" id=77]
[ext_resource path="res://Character/assets robot rojo/r_jump_9.png" type="Texture" id=78]
[ext_resource path="res://Character/assets robot rojo/r_jump_8.png" type="Texture" id=79]
[ext_resource path="res://Character/assets robot rojo/r_jump_5.png" type="Texture" id=80]
[ext_resource path="res://Character/assets robot rojo/r_jump_11.png" type="Texture" id=81]
[ext_resource path="res://Character/assets robot rojo/r_jump_1.png" type="Texture" id=82]
[ext_resource path="res://Character/assets robot rojo/r_jump_12.png" type="Texture" id=83]
[ext_resource path="res://Character/assets robot rojo/r_jump_15.png" type="Texture" id=85]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 66 ), ExtResource( 60 ), ExtResource( 56 ), ExtResource( 48 ), ExtResource( 50 ), ExtResource( 51 ), ExtResource( 58 ), ExtResource( 65 ) ],
"loop": true,
"name": "idle",
"speed": 7.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 7 ) ],
"loop": true,
"name": "tackle",
"speed": 10.0
}, {
"frames": [ ExtResource( 73 ), ExtResource( 74 ) ],
"loop": true,
"name": "hook",
"speed": 20.0
}, {
"frames": [ ExtResource( 76 ) ],
"loop": true,
"name": "on_air",
"speed": 10.0
}, {
"frames": [ ExtResource( 82 ), ExtResource( 72 ), ExtResource( 73 ), ExtResource( 74 ), ExtResource( 80 ), ExtResource( 75 ), ExtResource( 76 ), ExtResource( 79 ), ExtResource( 78 ), ExtResource( 77 ), ExtResource( 81 ), ExtResource( 83 ), ExtResource( 71 ), ExtResource( 85 ) ],
"loop": true,
"name": "jump",
"speed": 15.0
}, {
"frames": [ ExtResource( 63 ), ExtResource( 49 ), ExtResource( 52 ), ExtResource( 53 ), ExtResource( 54 ), ExtResource( 69 ), ExtResource( 70 ), ExtResource( 55 ), ExtResource( 57 ), ExtResource( 59 ), ExtResource( 61 ), ExtResource( 64 ), ExtResource( 67 ), ExtResource( 62 ), ExtResource( 68 ), ExtResource( 47 ) ],
"loop": true,
"name": "walk",
"speed": 20.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 9.83038, 21.3771 )

[node name="Character" type="KinematicBody2D" groups=[
"player",
]]
position = Vector2( 488.763, 91.815 )
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
visible = false
margin_left = -57.6632
margin_top = -43.6057
margin_right = 59.3368
margin_bottom = -16.6057
align = 1
valign = 1
script = ExtResource( 22 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Character_State_Machine" type="Node" parent="."]
script = ExtResource( 3 )

[node name="Idle" type="Node" parent="Character_State_Machine"]
script = ExtResource( 2 )

[node name="Move" type="Node" parent="Character_State_Machine"]
script = ExtResource( 6 )

[node name="Jump" type="Node" parent="Character_State_Machine"]
script = ExtResource( 4 )

[node name="Lighting" type="Node" parent="Character_State_Machine"]
script = ExtResource( 19 )

[node name="Impulse" type="Node" parent="Character_State_Machine"]
script = ExtResource( 24 )

[node name="TimerNoInput" type="Timer" parent="Character_State_Machine/Impulse"]
wait_time = 0.2
one_shot = true

[node name="Attack" type="Node" parent="Character_State_Machine"]
script = ExtResource( 25 )

[node name="Timer" type="Timer" parent="Character_State_Machine/Attack"]
wait_time = 0.4
one_shot = true

[node name="Tackle" type="Node" parent="Character_State_Machine"]
script = ExtResource( 28 )

[node name="BodyPivot" type="Position2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="AnimatedSprite3" type="AnimatedSprite" parent="BodyPivot"]
scale = Vector2( 0.1, 0.1 )
frames = SubResource( 1 )
animation = "tackle"

[node name="RayCast2DLighting" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 1500 )
collide_with_areas = true
script = ExtResource( 18 )

[node name="Camera2D" type="Camera2D" parent="." groups=[
"player",
]]
current = true
script = ExtResource( 23 )

[node name="Line2DLighting" type="Line2D" parent="."]
modulate = Color( 1.4, 1.4, 1.4, 1 )
points = PoolVector2Array( 0, 0, 0, 0 )
width = 4.0
default_color = Color( 0.4, 0.501961, 1, 0.470588 )
script = ExtResource( 26 )

[node name="Cursor" parent="." instance=ExtResource( 20 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=[
"player",
]]
position = Vector2( -0.250854, 2 )
shape = SubResource( 2 )

[node name="LevelTimer" parent="." instance=ExtResource( 21 )]
visible = false
position = Vector2( -13.983, -207.664 )

[node name="ImpulseTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="HitText" parent="." instance=ExtResource( 27 )]
margin_left = 767.414
margin_top = -275.587
margin_right = 908.414
margin_bottom = -187.587

[node name="HitPositionLeft" type="Position2D" parent="."]
position = Vector2( 370.703, -209.636 )

[node name="HitPositionRight" type="Position2D" parent="."]
position = Vector2( 796.902, -269.431 )
[connection signal="hit" from="." to="HitText" method="_on_Character_hit"]
[connection signal="state_changed" from="Character_State_Machine" to="Label" method="_on_Character_State_Machine_state_changed"]
[connection signal="timeout" from="Character_State_Machine/Impulse/TimerNoInput" to="Character_State_Machine/Impulse" method="_on_TimerNoInput_timeout"]
[connection signal="timeout" from="Character_State_Machine/Attack/Timer" to="Character_State_Machine/Attack" method="_on_Timer_timeout"]
[connection signal="timeOut" from="LevelTimer" to="." method="_on_LevelTimer_timeOut"]
[connection signal="timeout" from="ImpulseTimer" to="Character_State_Machine/Lighting" method="_on_Timer_timeout"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
